[package]
name = "phant-rs"
version = "0.1.0"
authors = ["Todd Treece <todd@uniontownlabs.org>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
failure = "0.1.1"
futures = "0.3.1"
r2d2 = "0.8.2"
r2d2_sqlite = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.44"
chrono = { version = "0.4.10", features = ["serde"] }

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled", "chrono", "serde_json"]
