[package]
name = "dlphn"
version = "0.5.1"
authors = ["Todd Treece <todd@uniontownlabs.org>"]
description = "a humble sensor data logger with a bundled react UI."
homepage = "https://github.com/toddtreece/dlphn-rs"
repository = "https://github.com/toddtreece/dlphn-rs"
keywords = ["data", "logger", "iot", "react"]
readme = "README.md"
license = "MIT"
edition = "2018"
include = ["src/**/*", "Cargo.toml", "ui/build/**/*", "docs/**/*"]

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
failure = "0.1.1"
futures = "0.3.1"
r2d2 = "0.8.2"
r2d2_sqlite = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.44"
chrono = { version = "0.4.10", features = ["serde"] }
local-ip = "0.1"
rust-embed="5.2.0"
mime_guess =  "2"
tokio = "0.2.9"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled", "chrono", "serde_json"]
